<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">


            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textSize="24sp"
                android:visibility="gone"

                />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_create_password"
                android:textSize="24sp"

                />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/input_header_account_name"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/account_box" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/hint_account_name"
                android:inputType="text"
                android:textColor="@color/inputText"
                android:textColorHint="@color/hintColor" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/input_header_username"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_person_24" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="username"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textColor="@color/inputText"
                android:textColorHint="@color/hintColor" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/input_header_password"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_password_24" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/visibility_off_eye"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hapticFeedbackEnabled="false"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/inputText"
                android:textColorHint="@color/hintColor" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/button5"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_button"
                android:text="@string/button_save_password" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>