<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_folder"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_header_create_folder"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/folder"
            android:drawablePadding="5dp"
            android:paddingBottom="5dp"
            />


        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_folder_name"
            android:background="@drawable/edittext_border"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:textColorHint="@color/hintColor"
            android:textColor="@color/inputText"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/CustomButton"
            android:text="@string/button_create_folder"
            android:background="@drawable/square_button"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>