<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ui.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center"
        android:paddingVertical="20dp"

        >

        <include
            layout="@layout/header_component"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:descendantFocusability="beforeDescendants"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_title"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:text="@string/title_username"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                />




            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="username"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/inputText"
                />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:text="@string/title_password"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_password_24"
                android:drawablePadding="5dp"
                />



            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/visibility_off_eye"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/inputText"
                android:hapticFeedbackEnabled="false"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/button"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_button"
                android:text="@string/button_sign_in"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>