<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"

        >

        <include layout="@layout/header_component"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_message"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button2"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/square_button"
            android:text="@string/button_sign_in"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button1"
            style="@style/CustomButton2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_button"
            android:text="@string/button_sign_up"
            android:textSize="18sp" />


    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>